doc/windows/VB6.0/32bit/multi_card/gts.bas

Public Declare Function GT_BufSetVarValue Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal pageId As Integer, ByRef pVarInfo As TVarInfo, ByVal value As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufJumpNextSeg Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal axis As Integer, ByVal limitType As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufSynchPrfPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal encoder As Integer, ByVal profile As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufVirtualToActual Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, Optional ByVal fifo As Integer = 0)
Public Declare Function GT_BufSetLongVar Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal index As Integer, ByVal value As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufSetDoubleVar Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal index As Integer, ByVal value As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_CrdStart Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Integer, ByVal optionV As Integer) As Integer
Public Declare Function GT_CrdStartStep Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Integer, ByVal stepOption As Integer) As Integer
Public Declare Function GT_CrdStepMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Integer, ByVal modeOption As Integer) As Integer
Public Declare Function GT_SetOverride Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal synVelRatio As Double) As Integer
Public Declare Function GT_SetOverride2 Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal synVelRatio As Double) As Integer
Public Declare Function GT_InitLookAhead Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal fifo As Integer, ByVal T As Double, ByVal accMax As Double, ByVal n As Integer, ByRef pLookAheadBuf As TCrdData) As Integer
Public Declare Function GT_GetLookAheadSpace Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal pSpace As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_GetLookAheadSegCount Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal pSegCount As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_CrdClear Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal fifo As Integer) As Integer
Public Declare Function GT_CrdStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pRun As Integer, ByRef pSegment As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_SetUserSegNum Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal segNum As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_GetUserSegNum Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pSegment As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_GetUserSegNumWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal pSegment As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_GetRemainderSegNum Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pSegment As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_SetCrdStopDec Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal decSmoothStop As Double, ByVal decAbruptStop As Double) As Integer
Public Declare Function GT_GetCrdStopDec Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pDecSmoothStop As Double, ByRef pDecAbruptStop As Double) As Integer
Public Declare Function GT_SetCrdLmtStopMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal lmtStopMode As Integer) As Integer
Public Declare Function GT_GetCrdLmtStopMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pLmtStopMode As Integer) As Integer
Public Declare Function GT_GetUserTargetVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pTargetVel As Double) As Integer
Public Declare Function GT_GetSegTargetPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pTargetPos As Long) As Integer
Public Declare Function GT_GetCrdPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pPos As Double) As Integer
Public Declare Function GT_GetCrdVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pSynVel As Double) As Integer
Public Declare Function GT_SetCrdSingleMaxVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pMaxVel As Double) As Integer
Public Declare Function GT_GetCrdSingleMaxVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pMaxVel As Double) As Integer
Public Declare Function GT_GetCmdCount Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByRef pLmtStopMode As Integer, ByVal fifo As Integer) As Integer
Public Declare Function GT_BufLaserOn Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_BufLaserOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_BufLaserPrfCmd Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal laserPower As Double, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_BufLaserFollowRatio Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal ratio As Double, ByVal minPower As Double, ByVal maxPower As Double, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_BufLaserFollowMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, Optional ByVal source As Integer = 0, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0, Optional ByVal startPower As Double = 0) As Integer
Public Declare Function GT_BufLaserFollowOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0) As Integer
Public Declare Function GT_BufLaserFollowSpline Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal tableId As Integer, ByVal minPower As Double, ByVal maxPower As Double, Optional ByVal fifo As Integer = 0, Optional ByVal channel As Integer = 0) As Integer

Public Declare Function GT_PrfPvt Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer) As Integer
Public Declare Function GT_SetPvtLoop Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal loopValue As Long) As Integer
Public Declare Function GT_GetPvtLoop Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pLoopCount As Long, ByRef pLoop As Long) As Integer
Public Declare Function GT_PvtStatus Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pTableId As Integer, ByRef pTime As Double, Optional ByVal count As Integer = 1) As Integer
Public Declare Function GT_PvtStart Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long) As Integer
Public Declare Function GT_PvtTableSelect Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal tableId As Integer) As Integer

Public Declare Function GT_PvtTable Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal count As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pVel As Double) As Integer
Public Declare Function GT_PvtTableEx Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal count As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pVelBegin As Double, ByRef pVelEnd As Double) As Integer
Public Declare Function GT_PvtTableComplete Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal count As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pA As Double, ByRef pB As Double, ByRef pC As Double, Optional ByVal velBegin As Double = 0, Optional ByVal velEnd As Double = 0) As Integer
Public Declare Function GT_PvtTablePercent Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal count As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pPercent As Double, Optional ByVal velBegin As Double = 0) As Integer
Public Declare Function GT_PvtPercentCalculate Lib "gts.dll" (ByVal cardNum As Integer,ByVal n As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pPercent As Double, ByVal velBegin As Double, ByRef pVel As Double) As Integer
Public Declare Function GT_PvtTableContinuous Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal count As Long, ByRef pPos As Double, ByRef pVel As Double, ByRef pPercent As Double, ByRef pVelMax As Double, ByRef pAcc As Double, ByRef pDec As Double, ByVal timeBegin As Double) As Integer
Public Declare Function GT_PvtContinuousCalculate Lib "gts.dll" (ByVal cardNum As Integer,ByVal n As Long, ByRef pPos As Double, ByRef pVel As Double, ByRef pPercent As Double, ByRef pVelMax As Double, ByRef pAcc As Double, ByRef pDec As Double, ByRef pTime As Double) As Integer
Public Declare Function GT_PvtTableMovePercent Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal distance As Long, ByVal vm As Double, ByVal acc As Double, ByVal pa1 As Double, ByVal pa2 As Double, ByVal dec As Double, ByVal pd1 As Double, ByVal pd2 As Double, ByRef pVel As Double, ByRef pAcc As Double, ByRef pDec As Double, ByRef pTime As Double) As Integer
Public Declare Function GT_PvtTableMovePercentEx Lib "gts.dll" (ByVal cardNum As Integer,ByVal tableId As Integer, ByVal distance As Long, ByVal vm As Double, ByVal acc As Double, ByVal pa1 As Double, ByVal pa2 As Double, ByVal ma As Double, ByVal dec As Double, ByVal pd1 As Double, ByVal pd2 As Double, ByVal md As Double, ByRef pVel As Double, ByRef pAcc As Double, ByRef pDec As Double, ByRef pTime As Double) As Integer

Public Declare Function GT_HomeInit Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_Home Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal pos As Long, ByVal vel As Double, ByVal acc As Double, ByVal offset As Long) As Integer
Public Declare Function GT_Index Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal pos As Long, ByVal offset As Long) As Integer
Public Declare Function GT_HomeStop Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal pos As Long, ByVal vel As Double, ByVal acc As Double) As Integer
Public Declare Function GT_HomeSts Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pStatus As Integer) As Integer

Public Declare Function GT_HandwheelInit Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_SetHandwheelStopDec Lib "gts.dll" (ByVal cardNum As Integer,ByVal slave As Integer, ByVal decSmoothStop As Double, ByVal decAbruptStop As Double) As Integer
Public Declare Function GT_StartHandwheel Lib "gts.dll" (ByVal cardNum As Integer,ByVal slave As Integer, ByVal master As Integer, ByVal masterEven As Integer, ByVal slaveEven As Integer, ByVal intervalTime As Integer, ByVal acc As Double, ByVal dec As Double, ByVal vel As Double, ByVal stopWaitTime As Integer) As Integer
Public Declare Function GT_EndHandwheel Lib "gts.dll" (ByVal cardNum As Integer,ByVal slave As Integer) As Integer
